--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 /* Navbar */
+:root {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 nav {
   background-color: rgb(215, 215, 215);
@@ -30,11 +33,44 @@ body {
   background-color: rgb(215, 215, 215);
   margin: 0;
   padding: 0;
-  display: flex;
+
   gap: 16px;
   padding: 12px 16px;
 }
 
 .hero h2 {
   color: rgb(74, 73, 73);
+}
+
+/* Content */
+
+.content h2 {
+  padding: 2%;
+  text-align: center;
+}
+.content p {
+  text-align: center;
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
+hr {
+  width: 75%;
+}
+
+.content h3 {
+  padding: 2%;
+  text-align: center;
+}
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.content ol {
+  width: fit-content;
+  margin: 0 auto;
+  padding: 12px 16px;
+  list-style-position: inside;
 }
